MDEV-6961: mysqld should terminate when started with --wsrep-recover

Fixed the condition to make sure mysqld process terminates when
started with wsrep-recover.