sql/mysqld.cc
@@ -5620,10 +5620,11 @@ int mysqld_main(int argc, char **argv)
   }
 #endif
 
-  if (WSREP_ON && wsrep_recovery)
+  // Recover and exit.
+  if (wsrep_recovery)
   {
     select_thread_in_use= 0;
-    wsrep_recover();
+    if (WSREP_ON) wsrep_recover();
     unireg_abort(0);
   }
 
